tests/NormalTests/paczka1/fuzzy1/62607730.err
Error in line 2: (0uu3eWBv S907 6(,7
Error in line 3: RZZ A428 92,81
Error in line 7: 50uu3eWBv S907 110,4
Error in line 9: 3UI5Uz2hPYr A197 47,8
Error in line 1: RZZ A428 23,2
Error in line 29: RZZ A814 -1,5
Error in line 19: RZZ A814 52,1
Error in line 39: Yf7v7s8R8i A428 70,2
